tests/idris2/error/perror011/foo.ipkg
package foo
main = Main
executable = foo
